--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,9 @@ dependencies {
     //glide图片
     implementation 'com.github.bumptech.glide:glide:4.5.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
+//PhotoView 图片浏览缩放控件
+    implementation 'com.bm.photoview:library:1.4.1'
+//版本更新
+    implementation 'cn.xiaoluo:update-manager:1.2.0'//不用，效果不好
+    implementation 'com.allenliu.versionchecklib:library:2.0.0'
 }
